--- a/css/style.css
+++ b/css/style.css
@@ -280,6 +280,49 @@ nav li a:hover{
     font-family: var(--heading-font);
     margin-bottom: 10px;
  }
+ /* join section */
+ .join-section{
+      margin-top: 120px;
+      background-image: url('../assets/news-letter-bg.png');
+      padding: 199px 305px 193px 305px;
+      background-repeat: no-repeat;
+      text-align: center;
+      height: 533px;
+ }
+ .join-title h1{
+    color: white;
+    font-size: 50px;
+    font-weight: 700;
+    font-family: var(--heading-font);
+    margin-bottom: 23px;
+ }
+ .email{
+   width: 644px;
+   padding: 15px 0 15px 20px;
+   outline: none;
+   font-size: 16px;
+   font-weight: 400;
+   font-family: var(--text-font);
+   color: var(--text-color);
+    border-radius: 5px;
+    border: none;
+ }
+ .btn{
+   width: 186px;
+   padding: 19px 53px;
+   background-color: var(--primary-color);
+   border: none;
+   font-size: 16px;
+   font-weight: 600;
+   font-family: var(--text-font);
+   color: white;
+    border-radius: 5px;
+ }
+ .join-input{
+  
+    justify-content: space-between;
+ }
+ 
 
  /* Responsive************************************************* */
 @media screen and (max-width:576px) {
