--- a/css/style.css
+++ b/css/style.css
@@ -97,8 +97,10 @@ nav li a:hover{
     gap: 20px;
 }
 .cart{
-    box-shadow: 0 0 30 0 rgba(0, 0, 0, 0.272);
-} 
+   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
+    padding: 5px;
+    border-radius: 10px;
+}
 
 .cart p{
     font-size: 22px;
@@ -220,7 +222,7 @@ nav li a:hover{
    
   }
  
- .deal-ana,.deal-bloom{
+ .deal-ana{
     margin-bottom: 25px;
     border-radius: 14px;
    
@@ -287,7 +289,7 @@ nav li a:hover{
       padding: 199px 305px 193px 305px;
       background-repeat: no-repeat;
       text-align: center;
-      height: 533px;
+      /* height: 533px; */
  }
  .join-title h1{
     color: white;
@@ -297,7 +299,7 @@ nav li a:hover{
     margin-bottom: 23px;
  }
  .email{
-   width: 644px;
+  width: 644px;
    padding: 15px 0 15px 20px;
    outline: none;
    font-size: 16px;
@@ -308,7 +310,7 @@ nav li a:hover{
     border: none;
  }
  .btn{
-   width: 186px;
+  width: 186px;
    padding: 19px 53px;
    background-color: var(--primary-color);
    border: none;
@@ -322,7 +324,46 @@ nav li a:hover{
   
     justify-content: space-between;
  }
+ /* footer section */
+ footer{
+    padding: 50px 0;
+ }
+ .footer-content{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    justify-content: space-between;
+    gap: 40px;
+ }
+ .icon-1 a{
+   display: block;
+     margin-bottom: 26px;
+    color:rgba(107, 114, 128, 1);
+    text-decoration: none;
+    
+    
+ }
  
+    
+ 
+ .icon-2 a{
+     display: block;
+    margin-bottom: 26px;
+    color:rgba(107, 114, 128, 1);
+    text-decoration: none;
+   
+ }
+ .icon-3 img{
+    margin-right: 24px;
+    
+   
+ }
+ .footer-despription p{
+    font-size: 22px;
+    font-weight: 400;
+    font-family: var(--text-font);
+    color: rgba(0, 0, 0, 0.5);
+   
+ }
 
  /* Responsive************************************************* */
 @media screen and (max-width:576px) {
@@ -391,7 +432,7 @@ nav li a:hover{
         font-size: 14px;
     }
     .flower-store{
-        width: 200%;
+        width: 186%;
         padding: 0 20px 0 15px;
     }
     .deal-img{
@@ -399,6 +440,9 @@ nav li a:hover{
         gap: 20px;
         padding: 0 5px 0 10px;
       
+    }
+    .deal-ana{
+        margin-bottom: 25px;
     }
     .deal-2 h1{
     
@@ -419,6 +463,38 @@ nav li a:hover{
     
  .deal-zabo {
     width: 100%;
+ }
+ .join-section{
+    padding: 110px 36px 61px 36px;
+    height: 275px;
+    margin-top: 44px;
+  
+ }
+ .btn{
+padding: 19px 10px;
+ }
+ .email{
+    width: 100%;
+ }
+ .join-title h1{
+    font-size: 20px;
+ }
+ .footer-content{
+    grid-template-columns: repeat(1,1fr);
+    padding: 0 10px;
+    gap: 0;
+  
+ }
+ .deal-img img{
+    border-radius: 14px;
+ }
+ .deal-1{
+    position: absolute;
+    z-index: 1;
+    color: white;
+    top: 70px;
+    left: 120px;
+    text-align: center;
  }
    
 }
